data/derived/sp14/progs/unify/prog2688.ml.out
Characters 87-91:
  if boo then wwhile (func, boo)
                      ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'a * bool
